--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ asgiref==3.5.2
 dj-database-url==0.5.0
 Django==4.0.4
 gunicorn==20.1.0
+Pillow==9.1.1
 sqlparse==0.4.2
 whitenoise==6.1.0
-psycopg2-binary==2.9.3
